/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-08-22 02:35  UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  * config/linux/gcc.cf
    ! removed -DHB_VM_ALL from cflags
    
2012-08-21 01:00  UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  * thread.c
    ! protected _TlsSetValue and 	_TlsGetValue under HB_OS_WIN

2012-08-20 03:57 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/what32/source/_wintree.c
    ! reverted my change per 2012-06-20 06:52 UTC+0700 (with minor changes)
    which caused this particular file not compilable under BCC63.

2012-08-19 18:52 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rdd/dbf1.c
    ! bug fix in Foxpro DBFCDX after appending record with memo field (reported
    by Grzegorz in comp.lang.xharbour)

2012-08-17 10:20  UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  * contrib/jpeg/jmorecfg.h
    ! avoid redefinition of INT16 and UINT'6 with HB_DEFS_H_
    
2012-08-16 11:10 UTC-0300 Eduardo Fernandes <modalsist/at/yahoo.com.br>
  * source/rtl/tbrowse.prg
    ! fixed Stabilize, SetHilite and Moved methods for manual hilite/dehilite.
    Bug reported on xharbour's news group.

2012-08-15 12:30 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/common/hbver.c
  * contrib/jpeg/jmorecfg.h
    ! avoid redefinition of INT32 with HB_DEFS_H_

2012-08-14 11:36 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * include/hbdefs.h
    * Define LONGLONG for xCC
    ! Fixed HB_FUNC_EXTERN to use HB_IMPORT instead of HB_EXPORT

  * include/hbsetup.h
    - Removed unneeded #define of isacii() for xCC

  * source/common/hbtrace.c
    - Removed unneeded #define of close() dup() and fileno() for xCC and protected them with #ifndef

  * source/compiler/genc.c